crates/reinhardt-pages/tests/ui/client_form/choices/fail/untagged_enum.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
#[serde(untagged)]
enum ProviderMode {
	#[default]
	Fake,
	LiveApi,
}

fn main() {}
