crates/reinhardt-pages/tests/ui/client_form/choices/fail/untagged_enum.stderr
error: ClientFormChoices requires externally tagged string enum representation
 --> tests/ui/client_form/choices/fail/untagged_enum.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^
